force-app/main/default/objects/Order_Customisations_POE__c/Order_Customisations_POE__c.object-meta.xml
<CustomObject>
    <description>Order Customisation 
This is a combination of additional accommodations, flight Customisations and Cruise Customisation</description>
    <label>Order Customisation</label>
    <nameField>
        <displayFormat>Customisatio-{0000}</displayFormat>
        <label>Order Customisations  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Customisations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>