force-app/main/default/objects/Order_Customisations_POE__c/fields/Accom_Cost_per_Nights__c.field-meta.xml
<CustomField>
    <fullName>Accom_Cost_per_Nights__c</fullName>
    <description>Accommodation Extra Night cost</description>
    <label>Accom Cost per Night</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>