force-app/main/default/objects/Order_Customisations_POE__c/fields/Add_flight_details_to_quote__c.field-meta.xml
<CustomField>
    <fullName>Add_flight_details_to_quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add flight details to quote</label>
    <type>Checkbox</type>
</CustomField>