force-app/main/default/objects/Order_Customisations_POE__c/fields/Cancellation_Refund__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Refund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation/Refund POE</label>
    <referenceTo>Cancellation_Refund_POE__c</referenceTo>
    <relationshipLabel>Order Customisations</relationshipLabel>
    <relationshipName>Order_Customisations_POE</relationshipName>
    <type>Lookup</type>
</CustomField>