force-app/main/default/objects/Order_Customisations_POE__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <inlineHelpText>Please enter commission (if applicable) in $</inlineHelpText>
    <label>Commission</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>