force-app/main/default/objects/Order_Customisations_POE__c/fields/Component_IDs__c.field-meta.xml
<CustomField>
    <fullName>Component_IDs__c</fullName>
    <label>Component IDs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>