force-app/main/default/objects/Order_Customisations_POE__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>TextArea</type>
</CustomField>