force-app/main/default/objects/Order_Customisations_POE__c/fields/Consolidated_Fields__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Fields__c</fullName>
    <description>Dont delete used for merchant portal</description>
    <label>Consolidated Fields</label>
    <length>150</length>
    <type>Text</type>
</CustomField>