force-app/main/default/objects/Order_Customisations_POE__c/fields/Convert_To_New_OC__c.field-meta.xml
<CustomField>
    <fullName>Convert_To_New_OC__c</fullName>
    <label>Convert To New OC</label>
    <type>TextArea</type>
</CustomField>