force-app/main/default/objects/Order_Customisations_POE__c/fields/Customisation_Consultant_Name__c.field-meta.xml
<CustomField>
    <fullName>Customisation_Consultant_Name__c</fullName>
    <label>Customisation Consultant Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heather McKenzie - heather.mckenzie@tripadeal.com.au</fullName>
            </value>
            <value>
                <fullName>Sara Viola - sara.viola@tripadeal.com.au</fullName>
            </value>
            <value>
                <fullName>Jasmine Houlahan - jasmine.houlahan@tripadeal.com.au</fullName>
            </value>
            <value>
                <fullName>Rachael Easterbrook - rachael.easterbrook@tripadeal.com.au</fullName>
            </value>
            <value>
                <fullName>Charli O&apos;Connor - charli.oconnor@tripadeal.com.au</fullName>
                <isActive>false</isActive>
                <label>Charli O&apos;Connor - charli.oconnor@tripadeal.com.au</label>
            </value>
            <value>
                <fullName>Ellenor Waters - ellenor.waters@tripadeal.com.au</fullName>
                <isActive>false</isActive>
                <label>Ellenor Waters - ellenor.waters@tripadeal.com.au</label>
            </value>
            <value>
                <fullName>Tayla Bernoth-Prowse - tayla.bernoth-prowse@tripadeal.com.au</fullName>
                <isActive>false</isActive>
                <label>Tayla Bernoth-Prowse - tayla.bernoth-prowse@tripadeal.com.au</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>