force-app/main/default/objects/Order_Customisations_POE__c/fields/DealId_Title__c.field-meta.xml
<CustomField>
    <fullName>DealId_Title__c</fullName>
    <formula>mp_tad_order__r.ordexp_deal_id_title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DealId+Title</label>
    <type>Text</type>
</CustomField>