force-app/main/default/objects/Order_Customisations_POE__c/fields/ff_Add_On_Cancellation_Amount__c.field-meta.xml
<CustomField>
    <fullName>ff_Add_On_Cancellation_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Add On Cancellation Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>