force-app/main/default/objects/Order_Customisations_POE__c/fields/ff_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>ff_Total_Price__c</fullName>
    <formula>Total_price__c - ff_Add_On_Cancellation_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>