force-app/main/default/objects/Order_Customisations_POE__c/fields/FFStatus__c.field-meta.xml
<CustomField>
    <fullName>FFStatus__c</fullName>
    <label>FFStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unprocessed</fullName>
                <default>true</default>
                <label>Unprocessed</label>
            </value>
            <value>
                <fullName>Processing - Cancellation</fullName>
            </value>
            <value>
                <fullName>Processed - Custo Cancellation</fullName>
            </value>
            <value>
                <fullName>Processed - Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>