force-app/main/default/objects/Order_Customisations_POE__c/fields/mp_Deal_name__c.field-meta.xml
<CustomField>
    <fullName>mp_Deal_name__c</fullName>
    <formula>mp_tad_order__r.ordexp_deal__r.Deal_ID_Title__c</formula>
    <label>Deal name</label>
    <type>Text</type>
</CustomField>