force-app/main/default/objects/Order_Customisations_POE__c/fields/mp_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>mp_Departure_Date__c</fullName>
    <formula>mp_tad_order__r.ordexp_departure_date__r.Name</formula>
    <label>Departure Date</label>
    <type>Text</type>
</CustomField>