force-app/main/default/objects/Order_Customisations_POE__c/fields/mp_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>mp_Order_Number__c</fullName>
    <formula>mp_tad_order__r.Name</formula>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>