force-app/main/default/objects/Order_Customisations_POE__c/fields/mp_tad_order__c.field-meta.xml
<CustomField>
    <fullName>mp_tad_order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAD Order</label>
    <referenceTo>TAD_Order__c</referenceTo>
    <relationshipLabel>Order Customisations</relationshipLabel>
    <relationshipName>Order_Customisations_POE</relationshipName>
    <type>Lookup</type>
</CustomField>