force-app/main/default/objects/Order_Customisations_POE__c/fields/Nights__c.field-meta.xml
<CustomField>
    <fullName>Nights__c</fullName>
    <label># Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>