force-app/main/default/objects/Order_Customisations_POE__c/fields/Note_only_visibility__c.field-meta.xml
<CustomField>
    <fullName>Note_only_visibility__c</fullName>
    <label>Note only visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Merchant</fullName>
            </value>
            <value>
                <fullName>Internal + Merchant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>