force-app/main/default/objects/Order_Customisations_POE__c/fields/Order_Customisation_Cancelled_On__c.field-meta.xml
<CustomField>
    <fullName>Order_Customisation_Cancelled_On__c</fullName>
    <label>Order Customisation Cancelled On</label>
    <type>Date</type>
</CustomField>