force-app/main/default/objects/Order_Customisations_POE__c/fields/Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item__c</fullName>
    <label>Order Line Item</label>
    <referenceTo>order_line_item__c</referenceTo>
    <relationshipLabel>Order Customisations</relationshipLabel>
    <relationshipName>Order_Customisations_POE</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>