force-app/main/default/objects/Order_Customisations_POE__c/fields/ordexp_approval_status__c.field-meta.xml
<CustomField>
    <fullName>ordexp_approval_status__c</fullName>
    <label>Refund Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Documentation</fullName>
            </value>
            <value>
                <fullName>Pending CS Approval</fullName>
            </value>
            <value>
                <fullName>CS Approved</fullName>
            </value>
            <value>
                <fullName>CS Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Finance Approval</fullName>
            </value>
            <value>
                <fullName>Finance Approved</fullName>
            </value>
            <value>
                <fullName>Finance Rejected</fullName>
            </value>
            <value>
                <fullName>More Information Required by Finance</fullName>
            </value>
            <value>
                <fullName>Approved-Not Processed</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Approved-Refund Not Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>