force-app/main/default/objects/Order_Customisations_POE__c/fields/ordexp_order_amount_outstanding__c.field-meta.xml
<CustomField>
    <fullName>ordexp_order_amount_outstanding__c</fullName>
    <formula>mp_tad_order__r.ordexp_amount_outstanding__c</formula>
    <label>Order Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>