force-app/main/default/objects/Order_Customisations_POE__c/fields/ordexp_order_id__c.field-meta.xml
<CustomField>
    <fullName>ordexp_order_id__c</fullName>
    <formula>Order_Line_Item__r.ordexp_TAD_Order__c</formula>
    <label>Order Id</label>
    <type>Text</type>
</CustomField>