force-app/main/default/objects/Order_Customisations_POE__c/fields/ordexp_PAX_IDs__c.field-meta.xml
<CustomField>
    <fullName>ordexp_PAX_IDs__c</fullName>
    <label>PAX IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>