force-app/main/default/objects/Order_Customisations_POE__c/fields/Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name__c</fullName>
    <formula>Passengers__r.first_name__c + &apos; &apos; + Passengers__r.last_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passenger Name</label>
    <type>Text</type>
</CustomField>