force-app/main/default/objects/Order_Customisations_POE__c/fields/Passengers__c.field-meta.xml
<CustomField>
    <fullName>Passengers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passengers</label>
    <referenceTo>customer__c</referenceTo>
    <relationshipLabel>Order Customisations</relationshipLabel>
    <relationshipName>Order_Customisations_POE</relationshipName>
    <type>Lookup</type>
</CustomField>