force-app/main/default/objects/Order_Customisations_POE__c/fields/PAX_Qty__c.field-meta.xml
<CustomField>
    <fullName>PAX_Qty__c</fullName>
    <label>PAX Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>