force-app/main/default/objects/Order_Customisations_POE__c/fields/Pre_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Post_Date__c</fullName>
    <label>Pre/Post + Date</label>
    <type>TextArea</type>
</CustomField>