force-app/main/default/objects/Order_Customisations_POE__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation Booking</fullName>
            </value>
            <value>
                <fullName>Cruise Customisation</fullName>
            </value>
            <value>
                <fullName>Deal Join/Combine</fullName>
            </value>
            <value>
                <fullName>Flight Customisation</fullName>
            </value>
            <value>
                <fullName>Land Customisation</fullName>
            </value>
            <value>
                <fullName>Note Only</fullName>
            </value>
            <value>
                <fullName>Stop Over Customisation</fullName>
            </value>
            <value>
                <fullName>Transfer Customisation</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>