force-app/main/default/objects/Order_Customisations_POE__c/fields/Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason__c</fullName>
    <label>Refund Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer - Unable to travel - Medical</fullName>
            </value>
            <value>
                <fullName>Customer - Unable to Travel - Death</fullName>
            </value>
            <value>
                <fullName>Customer - Unable to Travel - Change of Mind</fullName>
            </value>
            <value>
                <fullName>Customer - Unable to Travel - Customer Complaint</fullName>
            </value>
            <value>
                <fullName>Internal - Offload</fullName>
            </value>
            <value>
                <fullName>Internal - Merchant</fullName>
            </value>
            <value>
                <fullName>Internal - Partner/ 3rd Party</fullName>
            </value>
            <value>
                <fullName>Internal - System Error</fullName>
            </value>
            <value>
                <fullName>Internal - Staff Error</fullName>
            </value>
            <value>
                <fullName>Internal - Goodwill</fullName>
            </value>
            <value>
                <fullName>Internal - Customer Complaint</fullName>
            </value>
            <value>
                <fullName>Internal - Min Numbers not met</fullName>
            </value>
            <value>
                <fullName>External - Merchant</fullName>
            </value>
            <value>
                <fullName>External - Force Majeure</fullName>
            </value>
            <value>
                <fullName>External - Partner/ 3rd Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>