force-app/main/default/objects/Order_Customisations_POE__c/fields/Request_a_quote__c.field-meta.xml
<CustomField>
    <fullName>Request_a_quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request a quote</label>
    <type>Checkbox</type>
</CustomField>