force-app/main/default/objects/Order_Customisations_POE__c/fields/Request_acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Request_acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request acknowledgement</label>
    <type>Checkbox</type>
</CustomField>