force-app/main/default/objects/Order_Customisations_POE__c/fields/Requested_Details__c.field-meta.xml
<CustomField>
    <fullName>Requested_Details__c</fullName>
    <label>Requested Details</label>
    <type>TextArea</type>
</CustomField>