force-app/main/default/objects/Order_Customisations_POE__c/fields/Save_and_Send__c.field-meta.xml
<CustomField>
    <fullName>Save_and_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This has been created to render data according to thr lightning buttons pressed.</description>
    <label>Save and Send</label>
    <type>Checkbox</type>
</CustomField>