force-app/main/default/objects/Order_Customisations_POE__c/fields/Send_Customer_Quote__c.field-meta.xml
<CustomField>
    <fullName>Send_Customer_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Customer Quote</label>
    <type>Checkbox</type>
</CustomField>