force-app/main/default/objects/Order_Customisations_POE__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote_Requested</fullName>
                <default>true</default>
                <label>Quote Requested</label>
            </value>
            <value>
                <fullName>Accepted_and_Paid</fullName>
                <label>Accepted and Paid</label>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Customer Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <isActive>false</isActive>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
                <isActive>false</isActive>
                <label>Acknowledged</label>
            </value>
            <value>
                <fullName>Note Only</fullName>
                <isActive>false</isActive>
                <label>Note Only</label>
            </value>
            <value>
                <fullName>Quote_Received</fullName>
                <isActive>false</isActive>
                <label>Quote Received</label>
            </value>
            <value>
                <fullName>Quoted</fullName>
                <isActive>false</isActive>
                <label>Quoted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>