force-app/main/default/objects/Order_Customisations_POE__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Quoted Nett Cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>