force-app/main/default/objects/Order_Customisations_POE__c/fields/Total_number_of_pax__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_pax__c</fullName>
    <formula>TEXT( Order_Line_Item__r.PAX_Quantity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total number of pax</label>
    <type>Text</type>
</CustomField>