force-app/main/default/objects/Order_Customisations_POE__c/fields/Total_price__c.field-meta.xml
<CustomField>
    <fullName>Total_price__c</fullName>
    <label>Total price</label>
    <summarizedField>mp_Quote_Detail_POE__c.TAD_Price__c</summarizedField>
    <summaryFilterItems>
        <field>mp_Quote_Detail_POE__c.Quote_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Quote Received, Paid, Customer Accepted, Quote Sent To Customer</value>
    </summaryFilterItems>
    <summaryForeignKey>mp_Quote_Detail_POE__c.mp_Order_Customisation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>