force-app/main/default/objects/Order_Customisations_POE__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Record_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upgrade Flight Class</fullName>
                <default>true</default>
                <label>Upgrade Flight Class</label>
            </value>
            <value>
                <fullName>Upgrade Carrier</fullName>
            </value>
            <value>
                <fullName>Customisation AE</fullName>
            </value>
            <value>
                <fullName>Customisation SB</fullName>
            </value>
            <value>
                <fullName>Customisation SO</fullName>
            </value>
            <value>
                <fullName>AE Accom</fullName>
            </value>
            <value>
                <fullName>SB Accom</fullName>
            </value>
            <value>
                <fullName>Custom Accom (AE)</fullName>
            </value>
            <value>
                <fullName>Custom Accom (SB)</fullName>
            </value>
            <value>
                <fullName>Upgrade Cabin</fullName>
            </value>
            <value>
                <fullName>Customisation</fullName>
            </value>
            <value>
                <fullName>Ticket Changes (Corrections)</fullName>
            </value>
            <value>
                <fullName>Re/New Ticket Charge</fullName>
            </value>
            <value>
                <fullName>Misc Charge</fullName>
            </value>
            <value>
                <fullName>Pre SO</fullName>
            </value>
            <value>
                <fullName>Post SO</fullName>
            </value>
            <value>
                <fullName>Lounge Pass</fullName>
            </value>
            <value>
                <fullName>Note Only</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Exclusives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>