force-app/main/default/objects/Order_Customisations_POE__c/recordTypes/Accommodation_Booking.recordType-meta.xml
<RecordType>
    <fullName>Accommodation_Booking</fullName>
    <active>true</active>
    <label>Accommodation Booking</label>
</RecordType>