force-app/main/default/objects/Order_Customisations_POE__c/recordTypes/Deal_Join_Combine.recordType-meta.xml
<RecordType>
    <fullName>Deal_Join_Combine</fullName>
    <active>true</active>
    <label>Deal Join/Combine</label>
</RecordType>