force-app/main/default/objects/Order_Customisations_POE__c/recordTypes/Flight_Customisation.recordType-meta.xml
<RecordType>
    <fullName>Flight_Customisation</fullName>
    <active>true</active>
    <label>Flight Customisation</label>
</RecordType>