force-app/main/default/objects/Order_Customisations_POE__c/recordTypes/Miscellaneous.recordType-meta.xml
<RecordType>
    <fullName>Miscellaneous</fullName>
    <active>true</active>
    <label>Miscellaneous</label>
</RecordType>