force-app/main/default/objects/Order_Customisations_POE__c/recordTypes/Note_Only.recordType-meta.xml
<RecordType>
    <fullName>Note_Only</fullName>
    <active>true</active>
    <label>Note Only</label>
</RecordType>