force-app/main/default/objects/Order_Customisations_POE__c/validationRules/Status_Accepted_and_Paid_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Accepted_and_Paid_validation</fullName>
    <active>false</active>
    <description>Accepted and Paid status only if amount outstanding on order is zero</description>
    <errorConditionFormula>AND(CONTAINS(Text( Status__c ),&quot;Accepted&quot;),
 Amount_Outstanding__c &gt; 0)</errorConditionFormula>
    <errorDisplayField>Nights__c</errorDisplayField>
    <errorMessage>Amount Outstanding on order must be paid before selecting &quot;Accepted and Paid&quot;</errorMessage>
</ValidationRule>