force-app/main/default/objects/Order_Customisations_POE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nights__c</columns>
    <columns>Rooms__c</columns>
    <columns>Accom_Cost_per_Nights__c</columns>
    <columns>Details__c</columns>
    <columns>Pre_Post_Date__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Customisation_type__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>